@@ -96,6 +96,7 @@ Version 1.13.1+dev:
      (This is useful mostly in conjunction with variable substitution.)
      These operator are applied after the existing - operator that takes the
      opposite direction.
+   * Adjacency filters in abilities and weapon specials now support count= and is_enemy=
  * Editor:
    * Added Category field and color sliders to the Edit Label panel.
  * Miscellaneous and bug fixes:
